test_suite/alan-2022-examples/failing/002250_mutation.alan
source Z8 begin get U[7 to] end
